# cadventory

./: .gitignore  .gitlab-ci.yml  CADventory.cpp  CHANGELOG  CMakeLists.txt  CMakeLists.txt.user.1a73ace  CONTRIBUTING.md  LICENSE  README.md  helloworld.cpp  images.qrc  main.cpp  run_tests.py
.cache/clangd/index/: CADventory.cpp.942D1053900D05A9.idx  CADventory.h.6B4BDF5540E53C6F.idx  FilesystemIndexer.cpp.51E706BA91E8EC2F.idx  FilesystemIndexer.h.9F872609DCDF3E6B.idx  GeometryBrowserDialog.cpp.A56841EAC583F690.idx  GeometryBrowserDialog.h.BBD2FE1369B6FA1C.idx  IndexingWorker.cpp.A548E0EF5BA30E8D.idx  IndexingWorker.h.A265342523C63771.idx  Library.cpp.51A52FC129A177C4.idx  Library.h.941BB129028D0C53.idx  LibraryWindow.cpp.7A473071C62725FD.idx  LibraryWindow.h.01B190B2396B1E3E.idx  MainWindow.cpp.02127BA202F2DDA4.idx  MainWindow.h.9DED7294F21C8812.idx  Model.cpp.0714DDE8DEB2CD9E.idx  Model.h.A5E2D0D29DB6D61D.idx  ModelCardDelegate.cpp.ED7B2D846438D187.idx  ModelCardDelegate.h.36EF3C1761568A53.idx  ModelFilterProxyModel.cpp.D6DE5FB4F8A178D9.idx  ModelFilterProxyModel.h.E273B6C56FDF9724.idx  ModelTest.cpp.77AB37935226433F.idx  ModelView.cpp.D74DD7BAE5C4D86B.idx  ModelView.h.A79355DFDAFAE3C7.idx  ProcessGFiles.cpp.CAFA8FEA56FFA2BD.idx  ProcessGFiles.h.6DC74EBF297FEAE1.idx  SplashDialog.cpp.7EA51CB0B8E1256A.idx  SplashDialog.h.445A95D16A29D472.idx  main.cpp.74D5B9F30D4851FE.idx
cmake/: FindBRLCAD.cmake  sqlite.cmake
cmake/patches/sqlite/: CMakeLists.txt
doc/: CADventory.docx
scripts/: README.md  asc_to_g.py  clip_classifier.py  index_models.py  init_db.py  requirements.txt
src/: CADventory.cpp  CADventory.h  FileSystemFilterProxyModel.cpp  FileSystemFilterProxyModel.h  FileSystemModelWithCheckboxes.cpp  FileSystemModelWithCheckboxes.h  FilesystemIndexer.cpp  FilesystemIndexer.h  GeometryBrowserDialog.cpp  GeometryBrowserDialog.h  IndexingWorker.cpp  IndexingWorker.h  Library.cpp  Library.h  LibraryWindow.cpp  LibraryWindow.h  LibraryWindow.ui  MainWindow.cpp  MainWindow.h  Model.cpp  Model.h  ModelCardDelegate.cpp  ModelCardDelegate.h  ModelFilterProxyModel.cpp  ModelFilterProxyModel.h  ModelView.cpp  ModelView.h  ModelWindow.cpp  ModelWindow.h  MyClass.h  ProcessGFiles.cpp  ProcessGFiles.h  ProgressWindow.cpp  ProgressWindow.h  ReportGenerationWindow.cpp  ReportGenerationWindow.h  ReportGeneratorWorker.cpp  ReportGeneratorWorker.h  SettingWindow.cpp  SettingWindow.h  (+37 more)
src/tests/: CMakeLists.txt  FileSystemFilterProxyModelTest.cpp  FileSystemModelWithCheckboxesTest.cpp  FilesystemIndexerPerfTest.cpp  FilesystemIndexerTest.cpp  GeometryBrowserDialogTest.cpp  IndexingWorkerTest.cpp  LibraryTest.cpp  LibraryWindowTest.cpp  MainWindowTest.cpp  ModelCardDelegateTest.cpp  ModelTest.cpp  ProcessGFilesTest.cpp
